--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@layer utilities {
+  .nav-links {
+    @apply text-zinc-500 hover:text-zinc-800 transition-colors;
+  }
+}
